Fix scrollbar height

--- a/webui/quasar/src/css/app.sass
+++ b/webui/quasar/src/css/app.sass
@@ -87,17 +87,14 @@
   overflow: hidden
   text-overflow: ellipsis
 
-  /* 垂直滚动条宽度 */
 .q-scrollarea__bar--vertical
   width: 4px !important
 
-/* 水平滚动条高度 */
 .q-scrollarea__bar--horizontal
   height: 4px !important
 
 .q-scrollarea__thumb
   width: 4px !important
-  height: 64px !important
 
 .q-dialog__backdrop
   backdrop-filter: blur(6px)
